[tool.poetry]
name = "shrub.py"
version = "3.0.3"
description = "Library for creating evergreen configurations"
authors = [
    "David Bradford <david.bradford@mongodb.com>",
    "Lydia Stepanek <lydia.stepanek@mongodb.com>",
    "Tausif Rahman <tausif.rahman@mongodb.com>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/evergreen-ci/shrub.py"
packages = [
    { include = "shrub", from = "src" },
]

[tool.poetry.dependencies]
python = ">3.6.1"
PyYaml = "^5.1"
dataclasses = {version = "^0.7", python = "3.6.*"}
pydantic = "^1.8"
git-url-parse = "^1"
typing-extensions = "^4"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-black = "^0.3"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.8.0"
black = "^19.10b0"
types-PyYAML = "^5.4.10"
flake8 = "3.9.2"

[tool.black]
line-length = 100
